Regression: Crashes when using packed text font in VSE #99872

Closed
opened 2022-07-20 13:34:15 +02:00 by naoki yamamoto · 17 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59

Blender Version
Broken: version: 3.2.1, branch: master, commit date: 2022-07-05 15:44, hash: a2d59b2dac
Broken: 3.0
Worked: 2.93.9, branch: master, commit date: 2022-04-19 14:25, hash: 31712ce77a

Caused by 523bc981cf

Short description of error
Crashes when using packed text font in VSE

Exact steps for others to reproduce the error

  • in a fresh Video Editing wokspace:
  • add a text strip
  • load any font
  • pack it (File > External Data > Pack Resources)
  • save the file
  • file crashes when being reloaded

Original report
Crashes when text font change in VSE.

  • I have not checked all fonts, but at least changing to multiple Japanese fonts causes a crash.
  • This problem did not reappear in blender on other PCs and was resolved once by doing the Load Factory Setting in 3.2, but it reappeared at some point. So I think there is some setting that is causing the problem, but I cannot identify what it is.
  1. open attached blend file
  2. In VSE switch text font to Meiryo Bold -> crash

system-info.txt

font crash.crash.txt

font crash.blend

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59 **Blender Version** Broken: version: 3.2.1, branch: master, commit date: 2022-07-05 15:44, hash: `a2d59b2dac` Broken: 3.0 Worked: 2.93.9, branch: master, commit date: 2022-04-19 14:25, hash: `31712ce77a` Caused by 523bc981cf **Short description of error** Crashes when using packed text font in VSE **Exact steps for others to reproduce the error** - in a fresh Video Editing wokspace: - add a text strip - load any font - pack it (`File` > `External Data` > `Pack Resources`) - save the file - file crashes when being reloaded **Original report** Crashes when text font change in VSE. - I have not checked all fonts, but at least changing to multiple Japanese fonts causes a crash. - This problem did not reappear in blender on other PCs and was resolved once by doing the Load Factory Setting in 3.2, but it reappeared at some point. So I think there is some setting that is causing the problem, but I cannot identify what it is. 1. open attached blend file 2. In VSE switch text font to Meiryo Bold -> crash [system-info.txt](https://archive.blender.org/developer/F13302955/system-info.txt) [font crash.crash.txt](https://archive.blender.org/developer/F13302954/font_crash.crash.txt) [font crash.blend](https://archive.blender.org/developer/F13302953/font_crash.blend)

Added subscriber: @poopoo

Added subscriber: @poopoo
Collaborator

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Collaborator

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Collaborator
blender.exe         :0x00007FF74CD650F0  blf_font_wrap_apply
blender.exe         :0x00007FF74CD62810  blf_font_boundbox__wrap
blender.exe         :0x00007FF74CD60B90  BLF_boundbox_ex
blender.exe         :0x00007FF7484E3D80  do_text_effect
blender.exe         :0x00007FF7484E9030  seq_render_effect_strip_impl
blender.exe         :0x00007FF7484E8280  do_render_strip_uncached
blender.exe         :0x00007FF7484EA680  seq_render_strip
blender.exe         :0x00007FF7484EA840  seq_render_strip_stack
blender.exe         :0x00007FF7484E7870  SEQ_render_give_ibuf
blender.exe         :0x00007FF748AF30A0  sequencer_ibuf_get
blender.exe         :0x00007FF748AF2800  sequencer_draw_preview
blender.exe         :0x00007FF748AED600  sequencer_preview_region_draw
blender.exe         :0x00007FF7484B7FE0  ED_region_do_draw
blender.exe         :0x00007FF7480E3770  wm_draw_window_offscreen
blender.exe         :0x00007FF7480E35C0  wm_draw_window
blender.exe         :0x00007FF7480E30B0  wm_draw_update
blender.exe         :0x00007FF7480BC9D0  WM_main
blender.exe         :0x00007FF7471A11D0  main
blender.exe         :0x00007FF74D1C6010  __scrt_common_main_seh
KERNEL32.DLL        :0x00007FFC20427020  BaseThreadInitThunk
ntdll.dll           :0x00007FFC215C2630  RtlUserThreadStart
``` blender.exe :0x00007FF74CD650F0 blf_font_wrap_apply blender.exe :0x00007FF74CD62810 blf_font_boundbox__wrap blender.exe :0x00007FF74CD60B90 BLF_boundbox_ex blender.exe :0x00007FF7484E3D80 do_text_effect blender.exe :0x00007FF7484E9030 seq_render_effect_strip_impl blender.exe :0x00007FF7484E8280 do_render_strip_uncached blender.exe :0x00007FF7484EA680 seq_render_strip blender.exe :0x00007FF7484EA840 seq_render_strip_stack blender.exe :0x00007FF7484E7870 SEQ_render_give_ibuf blender.exe :0x00007FF748AF30A0 sequencer_ibuf_get blender.exe :0x00007FF748AF2800 sequencer_draw_preview blender.exe :0x00007FF748AED600 sequencer_preview_region_draw blender.exe :0x00007FF7484B7FE0 ED_region_do_draw blender.exe :0x00007FF7480E3770 wm_draw_window_offscreen blender.exe :0x00007FF7480E35C0 wm_draw_window blender.exe :0x00007FF7480E30B0 wm_draw_update blender.exe :0x00007FF7480BC9D0 WM_main blender.exe :0x00007FF7471A11D0 main blender.exe :0x00007FF74D1C6010 __scrt_common_main_seh KERNEL32.DLL :0x00007FFC20427020 BaseThreadInitThunk ntdll.dll :0x00007FFC215C2630 RtlUserThreadStart ```

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk

Caused by 523bc981cf

CC @ideasman42

It is a regression, but a fairly old one, so not going to set this to High prio.

Caused by 523bc981cf CC @ideasman42 It is a regression, but a fairly old one, so not going to set this to High prio.
Philipp Oeser changed title from Crashes when text font change in VSE to Regression: Crashes when text font change in VSE 2022-08-16 12:42:16 +02:00

Added subscriber: @Harley

Added subscriber: @Harley

There also seems to be a problem accessing font->filepath in blf_font_new_from_mem > blf_font_new_ex [which is NULL] (at least in this case), so not sure if 523bc981cf just exposed another issue in font code).
@Harley might be interested as well.

There also seems to be a problem accessing `font->filepath` in `blf_font_new_from_mem` > `blf_font_new_ex` [which is NULL] (at least in this case), so not sure if 523bc981cf just exposed another issue in font code). @Harley might be interested as well.
Philipp Oeser changed title from Regression: Crashes when text font change in VSE to Regression: Crashes when using packed text font in VSE 2022-08-16 13:13:39 +02:00

I have raised the prio here (since it turned out that packed fonts are totally broken in the VSE)

I have raised the prio here (since it turned out that packed fonts are totally broken in the VSE)
Harley Acheson self-assigned this 2022-08-16 17:10:48 +02:00

@lichtwerk - Harley might be interested as well.

Almost anything font-related that could be broken within the last year or so is probably my mistake or related to something that I have changed. Looking now.

> @lichtwerk - Harley might be interested as well. Almost anything font-related that could be broken within the last year or so is *probably* my mistake or related to something that I have changed. Looking now.

I definitely see this issue in master, but caused only by {c0845abd897f}. This would only affect 3.4. It would be a simple correction to fix master.

The commit referenced above as the breaking commit - 523bc981cf actually just allowed VSE to embed fonts. So taking that one out fixes this crash just because the loading of an embedded font wouldn't happen.

So the complication here is that there will be a different cause in earlier versions so this will require multiple fixes.

I definitely see this issue in master, but caused only by {c0845abd897f}. This would only affect 3.4. It would be a simple correction to fix master. The commit referenced above as the breaking commit - 523bc981cf actually just allowed VSE to embed fonts. So taking that one out fixes this crash just because the loading of an embedded font wouldn't happen. So the complication here is that there will be a *different* cause in earlier versions so this will require multiple fixes.

This issue was referenced by 09640ab291

This issue was referenced by 09640ab2919c17f24e14c8d71fafdb15c4748395

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

Opening again, setting to Confirmed, since fix just posted was for master 3.4A only. Have a patch for prior versions to be approved.

Opening again, setting to Confirmed, since fix just posted was for master 3.4A only. Have a patch for prior versions to be approved.

This issue was referenced by 19202736d5

This issue was referenced by 19202736d51679e3669e75e53780e6aeb4924303

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.3 LTS milestone 2023-02-08 15:37:45 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99872
There is no content yet.